--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ generate_javadocs_jar = false
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
 mod_version = 1.0
-root_package = me.oganesson
+root_package = me.morishima
 mod_id = modid
 mod_name = Mod Name
 
@@ -26,7 +26,7 @@ mod_description =
 mod_url =
 mod_update_json =
 # Delimit authors with commas
-mod_authors = Oganesson897
+mod_authors = WeatheringWithMe
 mod_credits =
 mod_logo_path =
 
@@ -37,7 +37,7 @@ use_dependency_at_files = true
 
 # Run Configurations
 # If multiple arguments/tweak classes are stated, use spaces as the delimiter
-minecraft_username = Oganesson897
+minecraft_username = MorishimaHotaka
 extra_jvm_args =
 extra_tweak_classes =
 
