--- a/build.gradle
+++ b/build.gradle
@@ -2,21 +2,13 @@
  * It is advised that you do not edit anything in the build.gradle; unless you are sure of what you are doing
  */
 import com.gtnewhorizons.retrofuturagradle.mcp.InjectTagsTask
-import org.jetbrains.changelog.Changelog
 import org.jetbrains.gradle.ext.Gradle
-
-import java.time.LocalDate
 
 plugins {
     id 'java'
     id 'java-library'
-    id 'maven-publish'
-    id 'com.diffplug.spotless' version '6.19.0' apply false
-    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.7'
-    id 'com.gtnewhorizons.retrofuturagradle' version '1.3.26'
-    id 'com.matthewprenger.cursegradle' version '1.4.0' apply false
-    id 'com.modrinth.minotaur' version '2.+' apply false
-    id 'org.jetbrains.changelog' version '2.2.0'
+    alias libs.plugins.idea.ext
+    alias libs.plugins.rfg
 }
 
 apply from: 'gradle/scripts/helpers.gradle'
@@ -34,7 +26,6 @@ assertSubProperties 'is_coremod', 'coremod_includes_mod', 'coremod_plugin_class_
 assertSubProperties 'use_asset_mover', 'asset_mover_version'
 
 setDefaultProperty 'use_modern_java_syntax', false, false
-setDefaultProperty 'spotless', false, false
 setDefaultProperty 'generate_sources_jar', true, false
 setDefaultProperty 'generate_javadocs_jar', true, false
 setDefaultProperty 'mapping_channel', true, 'stable'
@@ -82,7 +73,7 @@ minecraft {
     useDependencyAccessTransformers.set(propertyBool('use_dependency_at_files'))
 
     username.set(propertyString('minecraft_username'))
-    
+
     // Add any additional tweaker classes here
     extraTweakClasses.addAll(propertyStringList('extra_tweak_classes'))
 
@@ -214,17 +205,23 @@ idea {
     project {
         settings {
             runConfigurations {
-                "1. Run Client"(Gradle) {
+                "1. Setup Decomp Workspace"(Gradle) {
+                    taskNames = ["setupDecompWorkspace"]
+                }
+                "2. Run Client"(Gradle) {
                     taskNames = ["runClient"]
                 }
-                "2. Run Server"(Gradle) {
+                "3. Run Server"(Gradle) {
                     taskNames = ["runServer"]
                 }
-                "3. Run Obfuscated Client"(Gradle) {
+                "4. Run Obfuscated Client"(Gradle) {
                     taskNames = ["runObfClient"]
                 }
-                "4. Run Obfuscated Server"(Gradle) {
+                "5. Run Obfuscated Server"(Gradle) {
                     taskNames = ["runObfServer"]
+                }
+                "6. Build Jar"(Gradle) {
+                    taskNames = ["build"]
                 }
             }
             compiler.javac {
@@ -249,54 +246,6 @@ test {
     })
 }
 
-String parserChangelog() {
-    if (!file('CHANGELOG.md').exists()) {
-        throw new GradleException('publish_with_changelog is true, but CHANGELOG.md does not exist in the workspace!')
-    }
-    String parsedChangelog = changelog.renderItem(
-            changelog.get(propertyString('mod_version')).withHeader(false).withEmptySections(false),
-            Changelog.OutputType.MARKDOWN)
-    if (parsedChangelog.isEmpty()) {
-        throw new GradleException('publish_with_changelog is true, but the changelog for the latest version is empty!')
-    }
-    return parsedChangelog
-}
-
-if (propertyBool('spotless')) {
-    apply plugin: 'com.diffplug.spotless'
-    // noinspection GroovyAssignabilityCheck
-    spotless {
-        encoding 'UTF-8'
-        format 'misc', {
-            target '.gitignore'
-
-            endWithNewline()
-            indentWithSpaces()
-            trimTrailingWhitespace()
-        }
-        java {
-            target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
-
-            endWithNewline()
-            formatAnnotations()
-            importOrder()
-            indentWithSpaces()
-            removeUnusedImports()
-            toggleOffOn()
-            trimTrailingWhitespace()
-
-            if (propertyBool('cleanthat')) {
-                cleanthat().sourceCompatibility('1.8')
-            }
-        }
-        json {
-            target 'src/main/resources/**/*.json', 'src/test/resources/**/*.json'
-
-            simple().indentWithSpaces(6)
-        }
-    }
-}
-
 tasks.register('generateMixinJson') {
     group 'cleanroom helpers'
     onlyIf {
@@ -307,7 +256,18 @@ tasks.register('generateMixinJson') {
     }
     doLast {
         def file = file("src/main/resources/mixins.${propertyString('mod_id')}.json")
-        file << """{\n\t"package": "${mixin_package}",\n\t"required": true,\n\t"refmap": "${mixin_refmap}",\n\t"target": "@env(DEFAULT)",\n\t"minVersion": "0.8.5",\n\t"compatibilityLevel": "JAVA_8",\n\t"mixins": [],\n\t"server": [],\n\t"client": []\n}"""
+        file << new StringBuilder()
+                .append("{").append("\n\t")
+                .append("\"package\": \"%s\",".formatted(propertyString('mixin_package'))).append("\n\t")
+                .append("\"required\": true,").append("\n\t")
+                .append("\"refmap\": \"%s\",".formatted(propertyString('mixin_refmap'))).append("\n\t")
+                .append("\"target\": \"@env(DEFAULT)\",").append("\n\t")
+                .append("\"minVersion\": \"0.8.5\",").append("\n\t")
+                .append("\"compatibilityLevel\": \"JAVA_8\",").append("\n\t")
+                .append("\"mixins\": [],").append("\n\t")
+                .append("\"server\": [],").append("\n\t")
+                .append("\"client\": [],").append("\n")
+                .append("}").toString()
     }
 }
 
@@ -365,5 +325,4 @@ idea.project.settings {
     }
 }
 
-apply from: 'gradle/scripts/publishing.gradle'
 apply from: 'gradle/scripts/extra.gradle'
