--- a/settings.gradle
+++ b/settings.gradle
@@ -18,7 +18,7 @@ pluginManagement {
 
 plugins {
     // Automatic toolchain provisioning
-    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.4.0'
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
 }
 
 dependencyResolutionManagement {
@@ -26,6 +26,8 @@ dependencyResolutionManagement {
         libs {
             plugin('rfg', 'com.gtnewhorizons.retrofuturagradle').version('1.3.26')
             plugin('idea-ext', 'org.jetbrains.gradle.plugin.idea-ext').version('1.1.7')
+            plugin('kotlin-jvm', 'org.jetbrains.kotlin.jvm').version('1.9.22')
+            plugin('kotlin-gradle', 'org.jetbrains.kotlin.kapt').version('1.9.22')
         }
         versions {
             /*
